# just-dna-lite

./: .env.template  AGENTS.md  Containerfile  README.md  compose.yaml  modules.yaml  pyproject.toml  uv.toml
docs/: FAQ.md  HF_MODULES.md  IMMUTABLE_MODE.md  SUPERHUMAN_REFRESH_PLAN.md  V1_PARITY.md
docs/manuscript/: ethics_committee_brief.md  manuscript_draft_v2.md  manuscript_journal_strategy.md
just-dna-pipelines/: pyproject.toml
just-dna-pipelines/src/just_dna_pipelines/: cli.py  module_config.py  module_registry.py
just-dna-pipelines/src/just_dna_pipelines/annotation/: analytics.py  hf_modules.py  module_cache.py  report_logic.py  resources.py
just-dna-pipelines/src/just_dna_pipelines/module_compiler/: cli.py  compiler.py  models.py  resolver.py
just-dna-pipelines/src/just_dna_pipelines/v1_port/: adapters.py  runner.py  sources.py
just-dna-pipelines/src/just_dna_pipelines/v1_port/data/: superhuman_pmid_curation.csv
just-dna-pipelines/tests/: test_module_cache.py  test_module_compiler.py  test_report_logic.py  test_v1_port.py
src/just_dna_lite/: cli.py
webui/: pyproject.toml  rxconfig.py
webui/assets/: .gitignore
webui/reflex.lock/: package.json
webui/src/webui/: app.py  crawler_assets.py  deployment_urls.py  run.py  state.py
webui/src/webui/components/: draggable.py  layout.py
webui/src/webui/pages/: analysis.py  annotate.py  dashboard.py  faq.py  index.py  modules.py
