[project]
name = "just-dna-lite"
version = "0.3.10"
description = "Just DNA Lite version to analyze your omics faster"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
  "typer>=0.24.1",
  "just-dna-pipelines",
  "webui",
  "pyyaml>=6.0.3",
  "dagster-dg-cli>=1.12.22",
  "google-genai>=1.71.0,<2.0",
  "just-prs>=0.7.4",
]

[tool.uv.sources]
just-dna-pipelines = { workspace = true }
webui = { workspace = true }
agno = { git = "https://github.com/agno-agi/agno.git", rev = "f9de37bc43d3da911db239dc0b81045865c2a346", subdirectory = "libs/agno" }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
start = "just_dna_lite.cli:_start_all_cli"
ui = "webui.run:main"
serve = "webui.run:serve"
dagster-ui = "just_dna_lite.cli:_start_dagster_cli"
pipelines = "just_dna_lite.cli:app"
kill-ports = "webui.run:kill_ports"

[tool.uv.workspace]
members = ["just-dna-pipelines", "webui"]

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:eliottree.*",
    "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated:DeprecationWarning",
]
