[project]
name = "webui"
version = "0.2.5"
description = "Reflex Web UI for just-dna-lite"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "reflex==0.9.6.post1",
  "just-dna-pipelines",
  "granian>=2.7.3",
  "fastapi>=0.135.3",
  "prs-ui>=0.3.12",
  "gunicorn>=26.0.0",
  "google-genai>=1.71.0,<2.0",
]

[tool.uv.sources]
# Use the workspace-local just-dna-pipelines package as a dependency.
just-dna-pipelines = { workspace = true }

[project.scripts]
run = "webui.run:main"
serve = "webui.run:serve"

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "ruff>=0.15.9",
]
